// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`golden .CDX1 export > maps each remaining nose shape 1`] = `
"<RASAeroDocument>
<FileVersion>2</FileVersion>
<RocketDesign>
<NoseCone>
<PartType>NoseCone</PartType>
<Length>3.937</Length>
<Diameter>1.5748</Diameter>
<Shape>Tangent Ogive</Shape>
<BluntRadius>0</BluntRadius>
<Location>0</Location>
<Color>Black</Color>
</NoseCone>
<BodyTube>
<PartType>BodyTube</PartType>
<Length>11.811</Length>
<Diameter>1.5748</Diameter>
<LaunchLugDiameter>0</LaunchLugDiameter>
<LaunchLugLength>0</LaunchLugLength>
<RailGuideDiameter>0</RailGuideDiameter>
<RailGuideHeight>0</RailGuideHeight>
<LaunchShoeArea>0</LaunchShoeArea>
<Location>3.937</Location>
<Color>Black</Color>
<BoattailLength>0</BoattailLength>
<BoattailRearDiameter>0</BoattailRearDiameter>
<BoattailOffset>0</BoattailOffset>
<Overhang>0</Overhang>
<Fin>
<Count>4</Count>
<Chord>3.937</Chord>
<Span>2.7559</Span>
<SweepDistance>1.1811</SweepDistance>
<TipChord>1.5748</TipChord>
<Thickness>0.126</Thickness>
<LERadius>0</LERadius>
<Location>4.1338</Location>
<AirfoilSection>Square</AirfoilSection>
<FX1>0</FX1>
<FX3>0</FX3>
</Fin>
</BodyTube>
<Surface>Rough Camouflage Paint</Surface>
<CD>0</CD>
<ModifiedBarrowman>False</ModifiedBarrowman>
<Turbulence>False</Turbulence>
<SustainerNozzle>0</SustainerNozzle>
<Booster1Nozzle>0</Booster1Nozzle>
<Booster2Nozzle>0</Booster2Nozzle>
<UseBooster1>False</UseBooster1>
<UseBooster2>False</UseBooster2>
<Comments>Nose</Comments>
</RocketDesign>
<LaunchSite>
<Altitude>0</Altitude>
<Pressure>29.92</Pressure>
<RodAngle>0</RodAngle>
<RodLength>10</RodLength>
<Temperature>59</Temperature>
<WindSpeed>0</WindSpeed>
</LaunchSite>
<Recovery>
<Altitude1>0</Altitude1>
<Altitude2>0</Altitude2>
<DeviceType1>None</DeviceType1>
<DeviceType2>None</DeviceType2>
<Event1>False</Event1>
<Event2>False</Event2>
<Size1>0</Size1>
<Size2>0</Size2>
<EventType1>None</EventType1>
<EventType2>None</EventType2>
<CD1>0</CD1>
<CD2>0</CD2>
</Recovery>
<MachAlt></MachAlt>
<SimulationList>
<Simulation>
<SustainerLaunchWt>0</SustainerLaunchWt>
<SustainerNozzleDiameter>0</SustainerNozzleDiameter>
<SustainerCG>0</SustainerCG>
<SustainerIgnitionDelay>0</SustainerIgnitionDelay>
<Booster1LaunchWt>0</Booster1LaunchWt>
<Booster1SeparationDelay>0</Booster1SeparationDelay>
<Booster1IgnitionDelay>0</Booster1IgnitionDelay>
<Booster1CG>0</Booster1CG>
<Booster1NozzleDiameter>0</Booster1NozzleDiameter>
<IncludeBooster1>False</IncludeBooster1>
<Booster2LaunchWt>0</Booster2LaunchWt>
<Booster2Delay>0</Booster2Delay>
<Booster2CG>0</Booster2CG>
<Booster2NozzleDiameter>0</Booster2NozzleDiameter>
<IncludeBooster2>False</IncludeBooster2>
<FlightTime>0</FlightTime>
<TimetoApogee>0</TimetoApogee>
<MaxAltitude>0</MaxAltitude>
<MaxVelocity>0</MaxVelocity>
<OptimumWt>0</OptimumWt>
<OptimumMaxAlt>0</OptimumMaxAlt>
</Simulation>
</SimulationList>
</RASAeroDocument>"
`;

exports[`golden .CDX1 export > maps each remaining nose shape 2`] = `
"<RASAeroDocument>
<FileVersion>2</FileVersion>
<RocketDesign>
<NoseCone>
<PartType>NoseCone</PartType>
<Length>3.937</Length>
<Diameter>1.5748</Diameter>
<Shape>Elliptical</Shape>
<BluntRadius>0</BluntRadius>
<Location>0</Location>
<Color>Black</Color>
</NoseCone>
<BodyTube>
<PartType>BodyTube</PartType>
<Length>11.811</Length>
<Diameter>1.5748</Diameter>
<LaunchLugDiameter>0</LaunchLugDiameter>
<LaunchLugLength>0</LaunchLugLength>
<RailGuideDiameter>0</RailGuideDiameter>
<RailGuideHeight>0</RailGuideHeight>
<LaunchShoeArea>0</LaunchShoeArea>
<Location>3.937</Location>
<Color>Black</Color>
<BoattailLength>0</BoattailLength>
<BoattailRearDiameter>0</BoattailRearDiameter>
<BoattailOffset>0</BoattailOffset>
<Overhang>0</Overhang>
<Fin>
<Count>4</Count>
<Chord>3.937</Chord>
<Span>2.7559</Span>
<SweepDistance>1.1811</SweepDistance>
<TipChord>1.5748</TipChord>
<Thickness>0.126</Thickness>
<LERadius>0</LERadius>
<Location>4.1338</Location>
<AirfoilSection>Square</AirfoilSection>
<FX1>0</FX1>
<FX3>0</FX3>
</Fin>
</BodyTube>
<Surface>Rough Camouflage Paint</Surface>
<CD>0</CD>
<ModifiedBarrowman>False</ModifiedBarrowman>
<Turbulence>False</Turbulence>
<SustainerNozzle>0</SustainerNozzle>
<Booster1Nozzle>0</Booster1Nozzle>
<Booster2Nozzle>0</Booster2Nozzle>
<UseBooster1>False</UseBooster1>
<UseBooster2>False</UseBooster2>
<Comments>Nose</Comments>
</RocketDesign>
<LaunchSite>
<Altitude>0</Altitude>
<Pressure>29.92</Pressure>
<RodAngle>0</RodAngle>
<RodLength>10</RodLength>
<Temperature>59</Temperature>
<WindSpeed>0</WindSpeed>
</LaunchSite>
<Recovery>
<Altitude1>0</Altitude1>
<Altitude2>0</Altitude2>
<DeviceType1>None</DeviceType1>
<DeviceType2>None</DeviceType2>
<Event1>False</Event1>
<Event2>False</Event2>
<Size1>0</Size1>
<Size2>0</Size2>
<EventType1>None</EventType1>
<EventType2>None</EventType2>
<CD1>0</CD1>
<CD2>0</CD2>
</Recovery>
<MachAlt></MachAlt>
<SimulationList>
<Simulation>
<SustainerLaunchWt>0</SustainerLaunchWt>
<SustainerNozzleDiameter>0</SustainerNozzleDiameter>
<SustainerCG>0</SustainerCG>
<SustainerIgnitionDelay>0</SustainerIgnitionDelay>
<Booster1LaunchWt>0</Booster1LaunchWt>
<Booster1SeparationDelay>0</Booster1SeparationDelay>
<Booster1IgnitionDelay>0</Booster1IgnitionDelay>
<Booster1CG>0</Booster1CG>
<Booster1NozzleDiameter>0</Booster1NozzleDiameter>
<IncludeBooster1>False</IncludeBooster1>
<Booster2LaunchWt>0</Booster2LaunchWt>
<Booster2Delay>0</Booster2Delay>
<Booster2CG>0</Booster2CG>
<Booster2NozzleDiameter>0</Booster2NozzleDiameter>
<IncludeBooster2>False</IncludeBooster2>
<FlightTime>0</FlightTime>
<TimetoApogee>0</TimetoApogee>
<MaxAltitude>0</MaxAltitude>
<MaxVelocity>0</MaxVelocity>
<OptimumWt>0</OptimumWt>
<OptimumMaxAlt>0</OptimumMaxAlt>
</Simulation>
</SimulationList>
</RASAeroDocument>"
`;

exports[`golden .CDX1 export > maps each remaining nose shape 3`] = `
"<RASAeroDocument>
<FileVersion>2</FileVersion>
<RocketDesign>
<NoseCone>
<PartType>NoseCone</PartType>
<Length>3.937</Length>
<Diameter>1.5748</Diameter>
<Shape>LV-Haack</Shape>
<BluntRadius>0</BluntRadius>
<Location>0</Location>
<Color>Black</Color>
</NoseCone>
<BodyTube>
<PartType>BodyTube</PartType>
<Length>11.811</Length>
<Diameter>1.5748</Diameter>
<LaunchLugDiameter>0</LaunchLugDiameter>
<LaunchLugLength>0</LaunchLugLength>
<RailGuideDiameter>0</RailGuideDiameter>
<RailGuideHeight>0</RailGuideHeight>
<LaunchShoeArea>0</LaunchShoeArea>
<Location>3.937</Location>
<Color>Black</Color>
<BoattailLength>0</BoattailLength>
<BoattailRearDiameter>0</BoattailRearDiameter>
<BoattailOffset>0</BoattailOffset>
<Overhang>0</Overhang>
<Fin>
<Count>4</Count>
<Chord>3.937</Chord>
<Span>2.7559</Span>
<SweepDistance>1.1811</SweepDistance>
<TipChord>1.5748</TipChord>
<Thickness>0.126</Thickness>
<LERadius>0</LERadius>
<Location>4.1338</Location>
<AirfoilSection>Square</AirfoilSection>
<FX1>0</FX1>
<FX3>0</FX3>
</Fin>
</BodyTube>
<Surface>Rough Camouflage Paint</Surface>
<CD>0</CD>
<ModifiedBarrowman>False</ModifiedBarrowman>
<Turbulence>False</Turbulence>
<SustainerNozzle>0</SustainerNozzle>
<Booster1Nozzle>0</Booster1Nozzle>
<Booster2Nozzle>0</Booster2Nozzle>
<UseBooster1>False</UseBooster1>
<UseBooster2>False</UseBooster2>
<Comments>Nose</Comments>
</RocketDesign>
<LaunchSite>
<Altitude>0</Altitude>
<Pressure>29.92</Pressure>
<RodAngle>0</RodAngle>
<RodLength>10</RodLength>
<Temperature>59</Temperature>
<WindSpeed>0</WindSpeed>
</LaunchSite>
<Recovery>
<Altitude1>0</Altitude1>
<Altitude2>0</Altitude2>
<DeviceType1>None</DeviceType1>
<DeviceType2>None</DeviceType2>
<Event1>False</Event1>
<Event2>False</Event2>
<Size1>0</Size1>
<Size2>0</Size2>
<EventType1>None</EventType1>
<EventType2>None</EventType2>
<CD1>0</CD1>
<CD2>0</CD2>
</Recovery>
<MachAlt></MachAlt>
<SimulationList>
<Simulation>
<SustainerLaunchWt>0</SustainerLaunchWt>
<SustainerNozzleDiameter>0</SustainerNozzleDiameter>
<SustainerCG>0</SustainerCG>
<SustainerIgnitionDelay>0</SustainerIgnitionDelay>
<Booster1LaunchWt>0</Booster1LaunchWt>
<Booster1SeparationDelay>0</Booster1SeparationDelay>
<Booster1IgnitionDelay>0</Booster1IgnitionDelay>
<Booster1CG>0</Booster1CG>
<Booster1NozzleDiameter>0</Booster1NozzleDiameter>
<IncludeBooster1>False</IncludeBooster1>
<Booster2LaunchWt>0</Booster2LaunchWt>
<Booster2Delay>0</Booster2Delay>
<Booster2CG>0</Booster2CG>
<Booster2NozzleDiameter>0</Booster2NozzleDiameter>
<IncludeBooster2>False</IncludeBooster2>
<FlightTime>0</FlightTime>
<TimetoApogee>0</TimetoApogee>
<MaxAltitude>0</MaxAltitude>
<MaxVelocity>0</MaxVelocity>
<OptimumWt>0</OptimumWt>
<OptimumMaxAlt>0</OptimumMaxAlt>
</Simulation>
</SimulationList>
</RASAeroDocument>"
`;

exports[`golden .CDX1 export > maps each remaining nose shape 4`] = `
"<RASAeroDocument>
<FileVersion>2</FileVersion>
<RocketDesign>
<NoseCone>
<PartType>NoseCone</PartType>
<Length>3.937</Length>
<Diameter>1.5748</Diameter>
<Shape>Von Karman Ogive</Shape>
<BluntRadius>0</BluntRadius>
<Location>0</Location>
<Color>Black</Color>
</NoseCone>
<BodyTube>
<PartType>BodyTube</PartType>
<Length>11.811</Length>
<Diameter>1.5748</Diameter>
<LaunchLugDiameter>0</LaunchLugDiameter>
<LaunchLugLength>0</LaunchLugLength>
<RailGuideDiameter>0</RailGuideDiameter>
<RailGuideHeight>0</RailGuideHeight>
<LaunchShoeArea>0</LaunchShoeArea>
<Location>3.937</Location>
<Color>Black</Color>
<BoattailLength>0</BoattailLength>
<BoattailRearDiameter>0</BoattailRearDiameter>
<BoattailOffset>0</BoattailOffset>
<Overhang>0</Overhang>
<Fin>
<Count>4</Count>
<Chord>3.937</Chord>
<Span>2.7559</Span>
<SweepDistance>1.1811</SweepDistance>
<TipChord>1.5748</TipChord>
<Thickness>0.126</Thickness>
<LERadius>0</LERadius>
<Location>4.1338</Location>
<AirfoilSection>Square</AirfoilSection>
<FX1>0</FX1>
<FX3>0</FX3>
</Fin>
</BodyTube>
<Surface>Rough Camouflage Paint</Surface>
<CD>0</CD>
<ModifiedBarrowman>False</ModifiedBarrowman>
<Turbulence>False</Turbulence>
<SustainerNozzle>0</SustainerNozzle>
<Booster1Nozzle>0</Booster1Nozzle>
<Booster2Nozzle>0</Booster2Nozzle>
<UseBooster1>False</UseBooster1>
<UseBooster2>False</UseBooster2>
<Comments>Nose</Comments>
</RocketDesign>
<LaunchSite>
<Altitude>0</Altitude>
<Pressure>29.92</Pressure>
<RodAngle>0</RodAngle>
<RodLength>10</RodLength>
<Temperature>59</Temperature>
<WindSpeed>0</WindSpeed>
</LaunchSite>
<Recovery>
<Altitude1>0</Altitude1>
<Altitude2>0</Altitude2>
<DeviceType1>None</DeviceType1>
<DeviceType2>None</DeviceType2>
<Event1>False</Event1>
<Event2>False</Event2>
<Size1>0</Size1>
<Size2>0</Size2>
<EventType1>None</EventType1>
<EventType2>None</EventType2>
<CD1>0</CD1>
<CD2>0</CD2>
</Recovery>
<MachAlt></MachAlt>
<SimulationList>
<Simulation>
<SustainerLaunchWt>0</SustainerLaunchWt>
<SustainerNozzleDiameter>0</SustainerNozzleDiameter>
<SustainerCG>0</SustainerCG>
<SustainerIgnitionDelay>0</SustainerIgnitionDelay>
<Booster1LaunchWt>0</Booster1LaunchWt>
<Booster1SeparationDelay>0</Booster1SeparationDelay>
<Booster1IgnitionDelay>0</Booster1IgnitionDelay>
<Booster1CG>0</Booster1CG>
<Booster1NozzleDiameter>0</Booster1NozzleDiameter>
<IncludeBooster1>False</IncludeBooster1>
<Booster2LaunchWt>0</Booster2LaunchWt>
<Booster2Delay>0</Booster2Delay>
<Booster2CG>0</Booster2CG>
<Booster2NozzleDiameter>0</Booster2NozzleDiameter>
<IncludeBooster2>False</IncludeBooster2>
<FlightTime>0</FlightTime>
<TimetoApogee>0</TimetoApogee>
<MaxAltitude>0</MaxAltitude>
<MaxVelocity>0</MaxVelocity>
<OptimumWt>0</OptimumWt>
<OptimumMaxAlt>0</OptimumMaxAlt>
</Simulation>
</SimulationList>
</RASAeroDocument>"
`;

exports[`golden .CDX1 export > maps each remaining nose shape 5`] = `
"<RASAeroDocument>
<FileVersion>2</FileVersion>
<RocketDesign>
<NoseCone>
<PartType>NoseCone</PartType>
<Length>3.937</Length>
<Diameter>1.5748</Diameter>
<Shape>Power Law</Shape>
<BluntRadius>0</BluntRadius>
<Location>0</Location>
<Color>Black</Color>
<PowerLaw>0.5</PowerLaw>
</NoseCone>
<BodyTube>
<PartType>BodyTube</PartType>
<Length>11.811</Length>
<Diameter>1.5748</Diameter>
<LaunchLugDiameter>0</LaunchLugDiameter>
<LaunchLugLength>0</LaunchLugLength>
<RailGuideDiameter>0</RailGuideDiameter>
<RailGuideHeight>0</RailGuideHeight>
<LaunchShoeArea>0</LaunchShoeArea>
<Location>3.937</Location>
<Color>Black</Color>
<BoattailLength>0</BoattailLength>
<BoattailRearDiameter>0</BoattailRearDiameter>
<BoattailOffset>0</BoattailOffset>
<Overhang>0</Overhang>
<Fin>
<Count>4</Count>
<Chord>3.937</Chord>
<Span>2.7559</Span>
<SweepDistance>1.1811</SweepDistance>
<TipChord>1.5748</TipChord>
<Thickness>0.126</Thickness>
<LERadius>0</LERadius>
<Location>4.1338</Location>
<AirfoilSection>Square</AirfoilSection>
<FX1>0</FX1>
<FX3>0</FX3>
</Fin>
</BodyTube>
<Surface>Rough Camouflage Paint</Surface>
<CD>0</CD>
<ModifiedBarrowman>False</ModifiedBarrowman>
<Turbulence>False</Turbulence>
<SustainerNozzle>0</SustainerNozzle>
<Booster1Nozzle>0</Booster1Nozzle>
<Booster2Nozzle>0</Booster2Nozzle>
<UseBooster1>False</UseBooster1>
<UseBooster2>False</UseBooster2>
<Comments>Nose</Comments>
</RocketDesign>
<LaunchSite>
<Altitude>0</Altitude>
<Pressure>29.92</Pressure>
<RodAngle>0</RodAngle>
<RodLength>10</RodLength>
<Temperature>59</Temperature>
<WindSpeed>0</WindSpeed>
</LaunchSite>
<Recovery>
<Altitude1>0</Altitude1>
<Altitude2>0</Altitude2>
<DeviceType1>None</DeviceType1>
<DeviceType2>None</DeviceType2>
<Event1>False</Event1>
<Event2>False</Event2>
<Size1>0</Size1>
<Size2>0</Size2>
<EventType1>None</EventType1>
<EventType2>None</EventType2>
<CD1>0</CD1>
<CD2>0</CD2>
</Recovery>
<MachAlt></MachAlt>
<SimulationList>
<Simulation>
<SustainerLaunchWt>0</SustainerLaunchWt>
<SustainerNozzleDiameter>0</SustainerNozzleDiameter>
<SustainerCG>0</SustainerCG>
<SustainerIgnitionDelay>0</SustainerIgnitionDelay>
<Booster1LaunchWt>0</Booster1LaunchWt>
<Booster1SeparationDelay>0</Booster1SeparationDelay>
<Booster1IgnitionDelay>0</Booster1IgnitionDelay>
<Booster1CG>0</Booster1CG>
<Booster1NozzleDiameter>0</Booster1NozzleDiameter>
<IncludeBooster1>False</IncludeBooster1>
<Booster2LaunchWt>0</Booster2LaunchWt>
<Booster2Delay>0</Booster2Delay>
<Booster2CG>0</Booster2CG>
<Booster2NozzleDiameter>0</Booster2NozzleDiameter>
<IncludeBooster2>False</IncludeBooster2>
<FlightTime>0</FlightTime>
<TimetoApogee>0</TimetoApogee>
<MaxAltitude>0</MaxAltitude>
<MaxVelocity>0</MaxVelocity>
<OptimumWt>0</OptimumWt>
<OptimumMaxAlt>0</OptimumMaxAlt>
</Simulation>
</SimulationList>
</RASAeroDocument>"
`;

exports[`golden .CDX1 export > writes a bare single-stage design with RASAero defaults and an unmapped finish 1`] = `
"<RASAeroDocument>
<FileVersion>2</FileVersion>
<RocketDesign>
<NoseCone>
<PartType>NoseCone</PartType>
<Length>3.937</Length>
<Diameter>1.5748</Diameter>
<Shape>Conical</Shape>
<BluntRadius>0</BluntRadius>
<Location>0</Location>
<Color>Black</Color>
</NoseCone>
<BodyTube>
<PartType>BodyTube</PartType>
<Length>11.811</Length>
<Diameter>1.5748</Diameter>
<LaunchLugDiameter>0</LaunchLugDiameter>
<LaunchLugLength>0</LaunchLugLength>
<RailGuideDiameter>0</RailGuideDiameter>
<RailGuideHeight>0</RailGuideHeight>
<LaunchShoeArea>0</LaunchShoeArea>
<Location>3.937</Location>
<Color>Black</Color>
<BoattailLength>0</BoattailLength>
<BoattailRearDiameter>0</BoattailRearDiameter>
<BoattailOffset>0</BoattailOffset>
<Overhang>0</Overhang>
<Fin>
<Count>4</Count>
<Chord>3.937</Chord>
<Span>2.7559</Span>
<SweepDistance>1.1811</SweepDistance>
<TipChord>1.5748</TipChord>
<Thickness>0.126</Thickness>
<LERadius>0</LERadius>
<Location>4.1338</Location>
<AirfoilSection>Square</AirfoilSection>
<FX1>0</FX1>
<FX3>0</FX3>
</Fin>
</BodyTube>
<Surface>Smooth (Zero Roughness)</Surface>
<CD>0</CD>
<ModifiedBarrowman>False</ModifiedBarrowman>
<Turbulence>False</Turbulence>
<SustainerNozzle>0</SustainerNozzle>
<Booster1Nozzle>0</Booster1Nozzle>
<Booster2Nozzle>0</Booster2Nozzle>
<UseBooster1>False</UseBooster1>
<UseBooster2>False</UseBooster2>
<Comments>Bare</Comments>
</RocketDesign>
<LaunchSite>
<Altitude>0</Altitude>
<Pressure>29.92</Pressure>
<RodAngle>0</RodAngle>
<RodLength>10</RodLength>
<Temperature>59</Temperature>
<WindSpeed>0</WindSpeed>
</LaunchSite>
<Recovery>
<Altitude1>0</Altitude1>
<Altitude2>0</Altitude2>
<DeviceType1>None</DeviceType1>
<DeviceType2>None</DeviceType2>
<Event1>False</Event1>
<Event2>False</Event2>
<Size1>0</Size1>
<Size2>0</Size2>
<EventType1>None</EventType1>
<EventType2>None</EventType2>
<CD1>0</CD1>
<CD2>0</CD2>
</Recovery>
<MachAlt></MachAlt>
<SimulationList>
<Simulation>
<SustainerLaunchWt>0</SustainerLaunchWt>
<SustainerNozzleDiameter>0</SustainerNozzleDiameter>
<SustainerCG>0</SustainerCG>
<SustainerIgnitionDelay>0</SustainerIgnitionDelay>
<Booster1LaunchWt>0</Booster1LaunchWt>
<Booster1SeparationDelay>0</Booster1SeparationDelay>
<Booster1IgnitionDelay>0</Booster1IgnitionDelay>
<Booster1CG>0</Booster1CG>
<Booster1NozzleDiameter>0</Booster1NozzleDiameter>
<IncludeBooster1>False</IncludeBooster1>
<Booster2LaunchWt>0</Booster2LaunchWt>
<Booster2Delay>0</Booster2Delay>
<Booster2CG>0</Booster2CG>
<Booster2NozzleDiameter>0</Booster2NozzleDiameter>
<IncludeBooster2>False</IncludeBooster2>
<FlightTime>0</FlightTime>
<TimetoApogee>0</TimetoApogee>
<MaxAltitude>0</MaxAltitude>
<MaxVelocity>0</MaxVelocity>
<OptimumWt>0</OptimumWt>
<OptimumMaxAlt>0</OptimumMaxAlt>
</Simulation>
</SimulationList>
</RASAeroDocument>"
`;

exports[`golden .CDX1 export > writes the three-stage design with engines, recovery and launch site exactly as before 1`] = `
"<RASAeroDocument>
<FileVersion>2</FileVersion>
<RocketDesign>
<NoseCone>
<PartType>NoseCone</PartType>
<Length>7.874</Length>
<Diameter>2.9921</Diameter>
<Shape>Power Law</Shape>
<BluntRadius>0</BluntRadius>
<Location>0</Location>
<Color>Black</Color>
<PowerLaw>0.6</PowerLaw>
</NoseCone>
<BodyTube>
<PartType>BodyTube</PartType>
<Length>19.685</Length>
<Diameter>2.9921</Diameter>
<LaunchLugDiameter>0.315</LaunchLugDiameter>
<LaunchLugLength>1.9685</LaunchLugLength>
<RailGuideDiameter>0.4921</RailGuideDiameter>
<RailGuideHeight>0.4724</RailGuideHeight>
<LaunchShoeArea>0</LaunchShoeArea>
<Location>7.874</Location>
<Color>Black</Color>
<BoattailLength>0</BoattailLength>
<BoattailRearDiameter>0</BoattailRearDiameter>
<BoattailOffset>0</BoattailOffset>
<Overhang>0</Overhang>
</BodyTube>
<Transition>
<PartType>Transition</PartType>
<Length>1.9685</Length>
<Diameter>2.9921</Diameter>
<RearDiameter>2.3622</RearDiameter>
<Location>27.559</Location>
<Color>Black</Color>
<Fin>
<Count>4</Count>
<Chord>3.937</Chord>
<Span>2.7559</Span>
<SweepDistance>1.1811</SweepDistance>
<TipChord>1.5748</TipChord>
<Thickness>0.126</Thickness>
<LERadius>0.0394</LERadius>
<Location>1.5748</Location>
<AirfoilSection>Hexagonal</AirfoilSection>
<FX1>0.4724</FX1>
<FX3>0.5905</FX3>
</Fin>
</Transition>
<Booster>
<PartType>Booster</PartType>
<Length>15.748</Length>
<Diameter>2.9921</Diameter>
<InsideDiameter>2.3622</InsideDiameter>
<LaunchLugDiameter>0</LaunchLugDiameter>
<LaunchLugLength>0</LaunchLugLength>
<RailGuideDiameter>0</RailGuideDiameter>
<RailGuideHeight>0</RailGuideHeight>
<LaunchShoeArea>0</LaunchShoeArea>
<Location>31.1023</Location>
<Color>Black</Color>
<ShoulderLength>1.5748</ShoulderLength>
<NozzleExitDiameter>0</NozzleExitDiameter>
<BoattailLength>1.1811</BoattailLength>
<BoattailRearDiameter>1.5748</BoattailRearDiameter>
<Fin>
<Count>3</Count>
<Chord>4.7244</Chord>
<Span>3.1496</Span>
<SweepDistance>1.9685</SweepDistance>
<TipChord>0</TipChord>
<Thickness>0.1575</Thickness>
<LERadius>0</LERadius>
<Location>10.2362</Location>
<AirfoilSection>Square</AirfoilSection>
<FX1>0</FX1>
<FX3>0</FX3>
</Fin>
</Booster>
<Booster>
<PartType>Booster</PartType>
<Length>15.748</Length>
<Diameter>2.9921</Diameter>
<InsideDiameter>2.9921</InsideDiameter>
<LaunchLugDiameter>0</LaunchLugDiameter>
<LaunchLugLength>0</LaunchLugLength>
<RailGuideDiameter>0</RailGuideDiameter>
<RailGuideHeight>0</RailGuideHeight>
<LaunchShoeArea>0</LaunchShoeArea>
<Location>48.0314</Location>
<Color>Black</Color>
<ShoulderLength>0</ShoulderLength>
<NozzleExitDiameter>0</NozzleExitDiameter>
<BoattailLength>0</BoattailLength>
<BoattailRearDiameter>0</BoattailRearDiameter>
<Fin>
<Count>4</Count>
<Chord>3.937</Chord>
<Span>2.7559</Span>
<SweepDistance>1.1811</SweepDistance>
<TipChord>1.5748</TipChord>
<Thickness>0.126</Thickness>
<LERadius>0</LERadius>
<Location>4.1338</Location>
<AirfoilSection>Subsonic NACA</AirfoilSection>
<FX1>0</FX1>
<FX3>0</FX3>
</Fin>
</Booster>
<Surface>Galvanized Metal</Surface>
<CD>0</CD>
<ModifiedBarrowman>False</ModifiedBarrowman>
<Turbulence>False</Turbulence>
<SustainerNozzle>0</SustainerNozzle>
<Booster1Nozzle>0</Booster1Nozzle>
<Booster2Nozzle>0</Booster2Nozzle>
<UseBooster1>True</UseBooster1>
<UseBooster2>True</UseBooster2>
<Comments>Golden &lt;Triple&gt; &amp; co</Comments>
</RocketDesign>
<LaunchSite>
<Altitude>4593.176</Altitude>
<Pressure>25.1005</Pressure>
<RodAngle>4</RodAngle>
<RodLength>6.5617</RodLength>
<Temperature>86</Temperature>
<WindSpeed>10.0662</WindSpeed>
</LaunchSite>
<Recovery>
<Altitude1>656.168</Altitude1>
<Altitude2>0</Altitude2>
<DeviceType1>Parachute</DeviceType1>
<DeviceType2>Parachute</DeviceType2>
<Event1>True</Event1>
<Event2>True</Event2>
<Size1>35.433</Size1>
<Size2>15.748</Size2>
<EventType1>Altitude</EventType1>
<EventType2>Apogee</EventType2>
<CD1>0.8</CD1>
<CD2>0.75</CD2>
</Recovery>
<MachAlt>
<Item>0.3, 0</Item>
<Item>0.9, 4921.26</Item>
<Item>1.5, 9842.52</Item>
</MachAlt>
<SimulationList>
<Simulation>
<SustainerEngine>J350W  (AT)</SustainerEngine>
<SustainerLaunchWt>0</SustainerLaunchWt>
<SustainerNozzleDiameter>0</SustainerNozzleDiameter>
<SustainerCG>0</SustainerCG>
<SustainerIgnitionDelay>1.2</SustainerIgnitionDelay>
<Booster1Engine>K550W  (AT)</Booster1Engine>
<Booster1LaunchWt>0</Booster1LaunchWt>
<Booster1SeparationDelay>1.5</Booster1SeparationDelay>
<Booster1IgnitionDelay>0</Booster1IgnitionDelay>
<Booster1CG>0</Booster1CG>
<Booster1NozzleDiameter>0</Booster1NozzleDiameter>
<IncludeBooster1>True</IncludeBooster1>
<Booster2Engine>L1000  (CTI)</Booster2Engine>
<Booster2LaunchWt>5.5116</Booster2LaunchWt>
<Booster2Delay>0</Booster2Delay>
<Booster2CG>35.433</Booster2CG>
<Booster2NozzleDiameter>0</Booster2NozzleDiameter>
<IncludeBooster2>True</IncludeBooster2>
<FlightTime>0</FlightTime>
<TimetoApogee>0</TimetoApogee>
<MaxAltitude>0</MaxAltitude>
<MaxVelocity>0</MaxVelocity>
<OptimumWt>0</OptimumWt>
<OptimumMaxAlt>0</OptimumMaxAlt>
</Simulation>
</SimulationList>
</RASAeroDocument>"
`;
